@@ -1,5 +1,7 @@
 package com.example.ms3.note.note;
 
+import com.example.ms3.note.notebook.Notebook;
+import com.example.ms3.note.notebook.NotebookRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -13,44 +15,39 @@ import java.util.List;
 
 @Controller
 @RequiredArgsConstructor
+@RequestMapping("/books/{notebookId}/notes")
 public class NoteController {
 
     private final NoteRepository noteRepository;
-
-    @RequestMapping("/")
-    public String main(Model model) {
-        List<Note> noteList = noteRepository.findAll();
-
-        if (noteList.isEmpty()) {
-            saveDefault();
-
-            return "redirect:/";
-        }
-
-        model.addAttribute("noteList", noteList);
-        model.addAttribute("targetNote", noteList.get(0));
-
-        return "main";
-    }
+    private final NotebookRepository notebookRepository;
+    private final NoteService noteService;
 
     @PostMapping("/write")
-    public String write() {
-        saveDefault();
+    public String write(@PathVariable("notebookId") Long notebookId) {
+        Notebook notebook = notebookRepository.findById(notebookId).orElseThrow();
+        noteService.saveDefault(notebook);
 
         return "redirect:/";
     }
 
-    @GetMapping("/detail/{id}")
-    public String detail(Model model, @PathVariable("id") Long id) {
+    @GetMapping("/{id}")
+    public String detail(Model model, @PathVariable("notebookId") Long notebookId, @PathVariable("id") Long id) {
         Note note = noteRepository.findById(id).get();
+
+        List<Notebook> notebookList = notebookRepository.findAll();
+        Notebook targetNotebook = notebookRepository.findById(notebookId).get();
+        List<Note> noteList = noteRepository.findByNotebook(targetNotebook);
+
         model.addAttribute("targetNote", note);
-        model.addAttribute("noteList", noteRepository.findAll());
+        model.addAttribute("noteList", noteList);
+        model.addAttribute("targetNotebook", targetNotebook);
+        model.addAttribute("notebookList", notebookList);
 
         return "main";
     }
 
-    @PostMapping("/update")
-    public String update(Long id, String title, String content) {
+    @PostMapping("/{id}/update")
+    public String update(@PathVariable("notebookId") Long notebookId, @PathVariable("id") Long id, String title, String content) {
         Note note = noteRepository.findById(id).get();
 
         if (title.trim().length() == 0) {
@@ -61,21 +58,14 @@ public class NoteController {
         note.setContent(content);
 
         noteRepository.save(note);
-        return String.format("redirect:/detail/%d", id);
+        return "redirect:/books/%d/notes/%d".formatted(notebookId, id);
     }
 
-    @PostMapping("/delete/{id}")
-    public String delete(@PathVariable("id") Long id) {
+    @PostMapping("/{id}/delete")
+    public String delete(@PathVariable("id") Long id, @PathVariable("notebookId") Long notebookId) {
         noteRepository.deleteById(id);
         return "redirect:/";
     }
 
-    private Note saveDefault() {
-        Note note = new Note();
-        note.setTitle("new title");
-        note.setContent("");
-        note.setCreateDate(LocalDateTime.now());
 
-        return noteRepository.save(note);
-    }
 }
